<resources>
    <string name="app_name">SoBo</string>
    <string name="modul_image">Modul-Image</string>
    <string name="speichern">Speichern</string>
    <string name="später">Später</string>
    <string name="Datenbankleeren">Datenbank leeren</string>
    <string name="komma">,</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings ModulCoffee -->
    <string name="cups">Anzahl\nTassen</string>

    <!-- Strings ModulDrink -->
    <string name="minus">-</string>
    <string name="placeholder">-</string>
    <string name="nullstring">0</string>
    <string name="glasses">Anzahl\nGläser</string>

    <!-- Strings ModulWeight -->
    <string name="kg">kg</string>
    <string name="plus">+</string>
    <string name="diagramm">Diagramm</string>
    <string name="historie">Übersicht</string>
    <string name="zielgewicht">kg\n\nOptimales\nGewicht</string>
    <string name="startgewicht">kg\n\nAktuelles\nGewicht</string>
    <string name="zero">-.-</string>
    <string name="seventyfive">75.0</string>
    <string name="deletedata">Daten löschen</string>
    <string name="deletequestion">Möchten sie alle Daten löschen?</string>
    <string name="singlerecordquestion">Was möchten sie mit diesem Datensatz machen?</string>
    <string name="ja">Ja</string>
    <string name="nein">Nein</string>
    <string name="weiter">Weiter</string>
    <string name="firstentrytext">Das Gewichtsmodul benötigt vorab noch ein paar Informationen, um den BMI berechnen zu können.</string>
    <string name="fertig">fertig</string>
    <string name="größe">Körpergröße in Zentimeter</string>
    <string name="alter">Alter</string>
    <string name="geschlecht">Geschlecht</string>
    <string name="männlich">männlich</string>
    <string name="weiblich">weiblich</string>
    <string name="einstellungen">Einstellungen</string>
    <string name="gewicht">Gewicht</string>
    <string name="bmigrenzen">BMI Grenzen</string>
    <string name="optimalesgewicht">Optimales Gewicht</string>
    <string name="update">ändern</string>
    <string name="delete">löschen</string>

    <string-array name="sex">
        <item>Männlich</item>
        <item>Weiblich</item>
    </string-array>

    <string-array name="sexValues">
        <item>1</item>
        <item>0</item>
    </string-array>

    <string name="link_health_care"><a href="http://eid.dm.hs-furtwangen.de/joomla/index.php/gesundheitsangebote">http://eid.dm.hs-furtwangen.de/joomla/index.php/gesundheitsangebote</a></string>

    <!--Strings ModulMensa -->
    <string name="lastmodified">lastModified</string>
    <string name="week_of_the_year">KW %1$s</string>
    <string name="week_of_the_year_empty">KW</string>
    <string name="button_arrow_back">Button Pfeil zurück</string>
    <string name="button_more">Weiteres</string>
    <string name="button_less">Menü</string>

    <!-- Strings Modul Name -->
    <string name="namemensa">Mensa</string>
    <string name="nameweight">Gewicht</string>

    <!-- Strings Modul -->
    <string name="modulmensa">ModulMensa</string>
    <string name="modulweight">ModulWeight</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="limit_reached">LIMIT ERREICHT</string>
    <string name="target_reached">ZIEL ERREICHT</string>
    <string name="historie_coffee">Übersicht Kaffee</string>
    <string name="histore_drink">Übersicht Trinken</string>
    <string name="historie_weight">Übersicht Gewicht</string>
    <string name="heutiges_gewicht">Bitte geben Sie ihr heutiges Gewicht ein</string>
</resources>
