<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1">

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/kg"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/heutiges_gewicht"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp" />

    <NumberPicker
        android:id="@+id/integer"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/text" />

    <NumberPicker
        android:id="@+id/afterkomma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/integer"
        android:layout_alignBottom="@+id/integer"
        android:layout_toEndOf="@+id/komma"
        android:layout_toRightOf="@+id/komma" />

    <TextView
        android:id="@+id/komma"
        android:layout_width="25dp"
        android:layout_height="180dp"
        android:gravity="center"
        android:text="@string/komma"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:layout_below="@+id/text"
        android:layout_toEndOf="@+id/integer" />

    <TextView
        android:id="@+id/kg"
        android:layout_width="30dp"
        android:layout_height="180dp"
        android:layout_above="@+id/speichern"
        android:layout_toEndOf="@+id/afterkomma"
        android:layout_toRightOf="@+id/afterkomma"
        android:gravity="center"
        android:text="@string/kg"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp" />

    <Button
        android:id="@+id/speichern"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/kg"
        android:layout_below="@+id/integer"
        android:layout_toEndOf="@+id/komma"
        android:background="@color/colorAccent"
        android:text="@string/speichern"
        android:textColor="@color/colorButtonTextWhite"
        android:textSize="14sp" />

    <Button
        android:id="@+id/später"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/integer"
        android:layout_toStartOf="@+id/speichern"
        android:background="@color/colorAccent"
        android:text="@string/später"
        android:textColor="@color/colorButtonTextWhite"
        android:textSize="14sp" />


</RelativeLayout>