<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:paddingBottom="30dp"
        android:paddingTop="30dp"
        android:text="@string/singlerecordquestion"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_weight="0.12"
        android:orientation="horizontal">

        <Button
            android:id="@+id/update"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@color/colorDarkGrey"
            android:text="@string/update"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/delete"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@color/colorDarkGrey"
            android:text="@string/delete"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>
</LinearLayout>