<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1">

    <Button
        android:id="@+id/plus"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignTop="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:background="@drawable/button_bg_round"
        android:drawableBottom="@drawable/ic_add_black_24dp"
        android:onClick="newweight"
        android:padding="15dp"
        android:textColor="@color/colorButtonTextWhite" />

    <ListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/plus"
        android:layout_marginTop="40dp" />

    <Button
        android:id="@+id/viewgraph"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_above="@+id/listview"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="22dp"
        android:layout_marginRight="22dp"
        android:background="@color/colorPrimary"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:onClick="viewgraph"
        android:text="@string/diagramm"
        android:textColor="@color/colorButtonText"
        android:textSize="14sp" />

    <Button
        android:id="@+id/historie"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_above="@+id/listview"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="22dp"
        android:layout_marginStart="22dp"
        android:background="@color/colorPrimary"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:onClick="historie"
        android:text="@string/historie"
        android:textColor="@color/colorButtonText"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/viewgraph"
        android:layout_alignLeft="@+id/viewgraph"
        android:layout_alignRight="@+id/viewgraph"
        android:layout_alignStart="@+id/viewgraph"
        android:layout_below="@+id/weightgoal"
        android:gravity="center"
        android:text="@string/zielgewicht"

        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/historie"
        android:layout_alignLeft="@+id/historie"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/historie"
        android:layout_alignStart="@+id/historie"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:text="@string/startgewicht"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/firstweight"
        android:layout_width="wrap_content"
        android:layout_height="30sp"
        android:layout_above="@+id/plus"
        android:layout_alignEnd="@+id/textView3"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignRight="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:gravity="center"
        android:text="@string/zero"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/weightgoal"
        android:layout_width="wrap_content"
        android:layout_height="30sp"

        android:layout_above="@+id/plus"
        android:layout_alignEnd="@+id/textView4"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignRight="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:gravity="center"
        android:text="@string/seventyfive"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/weightdifference"
        android:layout_width="wrap_content"
        android:layout_height="26sp"
        android:gravity="center"
        android:text="@string/zero"
        android:textSize="16sp"
        android:layout_above="@+id/plus"
        android:layout_centerHorizontal="true" />
</RelativeLayout>



