<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/chart"
        android:layout_width="match_parent"
        android:layout_height="470dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp" />

    <TextView
        android:id="@+id/gewicht"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:text="@string/gewicht"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:layout_marginBottom="14dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/bmigrenzen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bmigrenzen"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="bold"
        android:layout_alignBaseline="@+id/gewicht"
        android:layout_alignBottom="@+id/gewicht"
        android:layout_toRightOf="@+id/gewicht"
        android:layout_toEndOf="@+id/gewicht"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp" />

    <TextView
        android:id="@+id/optimalesgewicht"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/optimalesgewicht"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:layout_alignBaseline="@+id/bmigrenzen"
        android:layout_alignBottom="@+id/bmigrenzen"
        android:layout_toRightOf="@+id/bmigrenzen"
        android:layout_toEndOf="@+id/bmigrenzen"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp" />
</RelativeLayout>