<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <DatePicker
            android:id="@+id/dp"
            android:layout_width="match_parent"
            android:layout_height="288dp"
            android:calendarViewShown="true"
            android:spinnersShown="false" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TableLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="0dp"
                    android:paddingRight="0dp">

                    <NumberPicker
                        android:id="@+id/integer"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/textView2"

                        android:layout_width="20dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="80dp"
                        android:text="@string/komma"
                        android:textSize="32sp" />

                    <NumberPicker
                        android:id="@+id/afterkomma"
                        android:layout_width="20dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/textView"

                        android:layout_width="wrap_content"
                        android:layout_marginTop="70dp"
                        android:layout_weight="1"
                        android:text="@string/kg"
                        android:textSize="32sp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/setButton"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_column="1"
                        android:layout_marginBottom="104dp"
                        android:layout_marginEnd="59dp"
                        android:layout_marginRight="59dp"
                        android:layout_weight="1"
                        android:text="@string/speichern" />
                </TableRow>
            </TableLayout>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>



